# mecantensor

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_dll.bat  pyproject.toml  setup.py  test_bench_qsbits.py  test_package.py  test_qsbits_scaling.py
demo/: main.cpp
docs/: 0.75b_architecture_plan.md
include/mecan/: mecan.h  parallel.h  python_bridge.h  tensor.h  trainer.h
include/mecan/autograd/: autograd.h  engine.h  function.h  functions.h  node.h  ops.h  trace.h  variable.h
include/mecan/core/: allocator.h  storage.h  types.h
include/mecan/distributed/: collective.h
include/mecan/hal/: cpu_backend.h  cuda_backend.h  hal.h  opencl_backend.h  vulkan_backend.h
include/mecan/io/: serialization.h
include/mecan/midbits/: midbits.h
include/mecan/nn/: linear.h  loss.h  module.h  ntm.h
include/mecan/ops/: attention.h  bitlinear.h  conv.h  fluxbits.h  math.h  norm.h  pad.h  pool.h  spatial.h  tsi.h  upsample.h
include/mecan/optim/: lgc.h
include/mecan/qsbits/: qsbits.h
include/mecan/runtime/: backend_registry.h  descriptors.h  interfaces.h  pager.h  quant_runtime.h  scheduler.h
include/mecan/vision/: color.h  core_vision.h  detect.h  light.h  motion.h  vector.h
mecantensor/: __init__.py  _native.py  fluxbits.py  hal.py  hlas.py  io.py  midbits.py  ops.py  qsbits.py  tensor.py  vision.py
mecantensor/infusion/: __init__.py
mecantensor/lgc/: __init__.py  galore.py
src/: python_bridge.cpp  tensor.cpp  trainer.cpp
src/autograd/: autograd.cpp  engine.cpp  ops_backward.cpp  variable.cpp
src/core/: allocator.cpp
src/distributed/: collective.cpp
src/fluxbits/: flux_compiler.cpp  flux_kernel.cpp  flux_layer.cpp
src/hal/: discovery.py  registry.cpp
src/hlas/: cpu_engine.cpp  gpu_engine.cpp  hlas.h  hybrid_engine.cpp  npu_engine.cpp
src/io/: serialization.cpp
src/midbits/: generator.py  midbits.cpp  midbits_codebook.h
src/nn/: linear.cpp  loss.cpp  ntm.cpp
src/ops/: attention.cpp  bitlinear.cpp  conv.cpp  detect_utils.cpp  math.cpp  norm.cpp  pad.cpp  pool.cpp  spatial.cpp  tsi.cpp  upsample.cpp
src/optim/: lgc.cpp
src/qsbits/: qsbits.cpp
src/runtime/: backend_registry.cpp  pager.cpp  quant_runtime.cpp  scheduler.cpp
src/vision/: color_engine.cpp  core_vision.cpp  detect_engine.cpp  light_engine.cpp  motion_engine.cpp  object_engine.cpp  vector_engine.cpp
