[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mecantensor"
version = "2.1.0"
description = "MecanTensor: Universal Hardware-Accelerated Tensor Engine with LGC, SSD Infusion, FluxBits, QSBits, MidBits, HAL, and HLAS"
readme = "README.md"
license = {text = "Proprietary — MecanLabs"}
requires-python = ">=3.10"
authors = [
    {name = "Aryan / MecanLabs"},
]
keywords = ["tensor", "ai", "machine-learning", "gpu", "simd", "quantization", "fluxbits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
opencl = ["pyopencl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mecantensor*"]
